5 April 2018: Wouter
	- Combine write of tcp length and tcp query for dns over tls.
	- nitpick fixes in example.conf.

3 April 2018: Wouter
	- Fix #4043: make test fails due to v6 presentation issue in macOS.
	- Fix unable to resolve after new WLAN connection, due to auth-zone
	  failing with a forwarder set.  Now, auth-zone is only used for
	  answers (not referrals) when a forwarder is set.

29 March 2018: Ralph
	- Check "result" in dup_all(), by Florian Obser.

23 March 2018: Ralph
	- Fix unbound-control get_option aggressive-nsec

21 March 2018: Ralph
	- Do not use cached NSEC records to generate negative answers for
	  domains under DNSSEC Negative Trust Anchors.

19 March 2018: Wouter
	- iana port update.

16 March 2018: Wouter
	- corrected a minor typo in the changelog.
	- move htobe64/be64toh portability code to cachedb.c.

15 March 2018: Wouter
	- Add --with-libhiredis, unbound support for a new cachedb backend
	  that uses a Redis server as the storage.  This implementation
	  depends on the hiredis client library (https://redislabs.com/lp/hiredis/).
	  And unbound should be built with both --enable-cachedb and
	  --with-libhiredis[=PATH] (where $PATH/include/hiredis/hiredis.h
	  should exist).  Patch from Jinmei Tatuya (Infoblox).
	- Fix #3817: core dump happens in libunbound delete, when queued
	  servfail hits deleted message queue.
	- Create additional tls service interfaces by opening them on other
	  portnumbers and listing the portnumbers as additional-tls-port: nr.

13 March 2018: Wouter
	- Fix typo in documentation.
	- Fix #3736: Fix 0 TTL domains stuck on SERVFAIL unless manually
	  flushed with serve-expired on.

12 March 2018: Wouter
	- Added documentation for aggressive-nsec: yes.
	- tag 1.7.0rc3.  That became the 1.7.0 release on 15 Mar, trunk
	  now has 1.7.1 in development.
	- Fix #3727: Protocol name is TLS, options have been renamed but
	  documentation is not consistent.
	- Check IXFR start serial.

9 March 2018: Wouter